# pytest-flakefighters

./: .gitignore  .mega-linter.yaml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci-mega-linter.yml  ci-tests-drafts.yaml  ci-tests.yaml  lint-format.yaml  mega-linter.yml  publish-pypi.yaml  pytest.yml
docs/: conf.py  index.rst
docs/source/: acknowlegements.rst  ci_cd.rst  conf.py  configuration.rst  custom_flakefighters.rst  glossary.rst  index.rst  installation.rst  reports.rst  requirements.txt
docs/source/_static/css/: custom.css
docs/source/dev/: actions_and_webhooks.rst  documentation.rst  version_release.rst
src/pytest_flakefighter/: database_management.py  flake_fighters.py  plugin.py
src/pytest_flakefighters/: config.py  database_management.py  flake_fighters.py  function_coverage.py  main.py  plugin.py  rerun_strategies.py  vcr_config.py
src/pytest_flakefighters/flakefighters/: abstract_flakefighter.py  coverage_independence.py  deflaker.py  traceback_matching.py
tests/: conftest.py  test_database_management.py  test_end_2_end.py  test_flakefighter.py  test_flaky_reruns.py  test_function_coverage.py  test_rerun_strategies.py
tests/flakefighters/: test_cosine_similarity.py  test_coverage_independence.py  test_deflaker.py  test_traceback_matching.py
tests/resources/: deflaker_broken.py  deflaker_broken.txt  deflaker_example.py  deflaker_example.txt  flaky_reruns.py  gatorgrade.py  pass_fail_flaky.py  test_gatorgrade.py  test_triangle.txt  triangle.py  triangle.txt  triangle_broken.py  triangle_broken.txt  triangle_example.py  triangle_example.txt  triangle_failure.txt
